# VMS

VMS/: CMakeLists.txt  README.md  build.sh  install_dependencies.sh  run.sh  test_gstreamer.sh  test_network.sh  test_server.sh  test_stream.html  test_streams.sh
VMS/config/: vms.conf
VMS/src/: GStreamerPipeline.cpp  GStreamerPipeline.h  HttpServer.cpp  HttpServer.h  PassiveStreamMonitor.cpp  PassiveStreamMonitor.h  StreamManager.cpp  StreamManager.h  WebSocketHandler.cpp  WebSocketHandler.h  main.cpp
VMS/web/: index.html  script.js  styles.css
